...
    <string name="login_ui_v2_invalid_action">loginAction returned an invalid command object</string>
    <string name="login_ui_v2_save_error">Failed to save login info</string>
    <string name="show_login_header">show login header</string>
    <string name="login_header">login header</string>
    <string name="font_scale">font scale</string>
    <string name="font_scale_summary">font scale:%.1f</string>
    <string name="search_content_size">search result</string>
    <string name="search_content_empty">Empty search result, check conversation settings</string>
    <string name="tts_speech_reduce">Decrease speech speed</string>
    <string name="tts_speech_add">Increase speech speed</string>
    <string name="open_sys_dir_picker_error">Error opening system folder selector, automatically open application folder selector</string>
    <string name="open_sys_doc_picker_error">Error opening system file selector, automatically open application file selector</string>
    <string name="expand_text_menu">Expand text selection menu</string>
...
